# lineplz

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  todo.txt
lnpz/: lnpz.cpp  lnpz2d.cpp  lnpz_fieldquadtree.cpp  lnpz_fieldquadtree.h  lnpz_floatingpoint.h  lnpz_quadtree.cpp  lnpz_quadtree.h  lnpz_util.cpp  lnpz_util.h  scratch.cpp
lnpz/Clipper2/CPP/: CMakeLists.txt
lnpz/include/lnpz/: lnpz.h  lnpz2d.h  lnpz_array2d.h  lnpz_color.h  lnpz_linalgd.h
samples/: lnpz-sample.cpp
test/: test.cpp
